Added content to career page, need to finalize Mobile Agent content before moving to ITS

--- a/career/career.html
+++ b/career/career.html
@@ -21,14 +21,28 @@
         <div class="site-wrap">
             <div class="row">
                 <div class="text-content-box col-md-8 col-sm-12">
-                    <h3 class="primary"><a href="sdsu.html"> San Diego State University: IT Divison, ServiceNow Deployment </a></h3>
+                    <h3 class="primary"><a href="sdsu.html"> San Diego State University: IT Divison, ServiceNow
+                            Deployment </a></h3>
                     <h3 class="secondary">Student Developer / Application Administrator</h3>
                     <h3 class="secondary">Feb 2020 - Aug 2020</h3>
-                    <p> During the Spring 2020 semester, I was approached with the opportunity to work with IT User Services to develop the ServiceNow platform for the university. My prior experience with winning the SDSU/ServiceNow Hackathon made me a prime
-                        candiate for the Student Developer position on the development team. In February I began working with the IT User Services team. My core responsibilities on the team was to support IT division staff with the utilization and development
-                        of the ServiceNow platform for campus use. Often times my tasks involved troubleshooting issues submitted by users, implementing functions and features of the platform, and configuring forms and user interfaces on the web portal.
-                        <p>Once I had demonstrated a solid understanding of both the ServiceNow platform, I became one of the main contributors to the SDSU Service Catalog project. Our goal was to migrate the IT User Services listings, which were previously
-                            listed on Azure or hosted independently by their respective departments, to a centralized university service portal.
+                    <p>
+                        <p>
+                            In the 2020 Spring Semester I began working with San Diego State University's IT User Services Department, as a part of the ServiceNow Deployment Team. I worked with an Agile team as both an Application Administrator and Platform Developer. My core responsibilities
+                            on the team was to support IT division staff with the utilization and development of the ServiceNow platform for campus use.
+                            <!-- Due to my background in
+                            computer science and prior experience as a winner of the 2019 SDSU/ServiceNow
+                            Hackathon, IT Division leadership approached me with this opportunity. -->
+                        </p>
+                        <p>
+                            Once I had demonstrated a solid understanding of the ServiceNow platform, I became one of the main contributors to the SDSU Service Catalog project. Our mission was to migrate the IT User Services catalog, which was previously listed on Azure or hosted
+                            independently by their respective departments, to a centralized university service portal. Additionally, I became responsible for the design and development of an IT Service Management mobile application built using ServiceNow's
+                            application development toolkit.
+                        </p>
+                        <p>
+                            After 6 months of working with IT User Services and reaching the end of my final semester at SDSU, my employment with San Diego State University ended as the student developer position is only available to active students.
+                        </p>
+                        <p>
+                            In August of 2020, I became a certified Systems Administrator after passing the ServiceNow Systems Administrator Certification exam.
                         </p>
                     </p>
                 </div>
@@ -44,27 +58,27 @@
                     <ul>
                         <div>
                             <li><a>As an Application Administrator:</a>
-                                <p> I addressed IT user issues and concerns regarding the platform, through the ServiceNow Incident Management System. I implemented a number of features on the ServiceNow platform to improver the user experience. Implementing
-                                    new work-flow processes to expedite IT tasks and procedures.
+                                <p> I addressed IT user issues and concerns regarding the platform. Through the use of ServiceNow's Incident Management system, I supported IT process users by maintaining timely communication with the involved members, developing
+                                    and testing platform solutions in the development instance, and then implementing finalized solutions into the production instance. Often times my tasks involved troubleshooting issues submitted by users, implementing
+                                    new functions and features of the platform, and updating forms and user interfaces on the web portal.
                                 </p>
                             </li>
                             <li><a>As a Student Developer:</a>
-                                <p> I was my responsibile for being familiar with core ServiceNow platform functions and basics as well as have an understanding of the web-client's structure and scripts. Development of features and functions including the
-                                    service catalog and web portal, required knowledge of the platform's data table interactions, XML document formatting, and
-
+                                <p> I was my responsibile for being familiar with core ServiceNow platform functions and basics as well as have an understanding of the web-client's structure and scripts. The development of features and functions, including
+                                    the service catalog and web portal, required knowledge of the platform's data table interactions, XML document formatting, and ServiceNow's client-side JavaScript Glide API.
                                 </p>
                                 <ul>
                                     <li>
-                                        <p class="project-title">SDSU Service Catalog Development</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                                            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-                                            anim id est laborum.</p>
+                                        <p class="project-title">SDSU Service Catalog/Web Portal Development</p>
+                                        <p>Beginning in March of 2020, I began working with the development team to build a new service catalog for SDSU. Our task was to migrate the university's service catalog from the previous Azure implementation, to
+                                            a new centralized web portal using ServiceNow. On the team I was responsibile for building, testing and implementing catalog items. This process required gathering requirements from department leadership, building
+                                            workflows and task tables, constructing variable sets and catalog items, and building automated-test suites to ensure catalog integrity with every item implementation.</p>
                                     </li>
                                     <li>
-                                        <p class="project-title">SDSU ITD Mobile Agent iOS/Android App</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                                            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-                                            anim id est laborum.</p>
+                                        <p class="project-title">SDSU ITSM Mobile Agent iOS/Android App</p>
+                                        <p>In April of 2020, after going through the initial stages of the Service Catalog implementation, I was asked to look into building a proof-of-concept ITSM Incident Management mobile application. I studied the ServiceNow
+                                            Studio application builder, mobile development best-practices and UX design.
+                                        </p>
                                     </li>
                                 </ul>
                             </li>
@@ -110,7 +124,8 @@
                                 <li><a>As an ITS Project Team member:</a>
                                     <p>Working closely with fellow ITS team members, I lead and participated in various projects for the Instructional Technology Services Department. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                                         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                                        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                    </p>
                                     <ul>
                                         <li>
                                             <p class="project-title">Parscore Excel Sheet Conversion Tool</p>
