completed content for IT User Services, need to finalize ITS content

--- a/career/career.html
+++ b/career/career.html
@@ -53,7 +53,7 @@
             <!--Upper-->
 
             <div class="row">
-                <div class="col-md-8" style='outline: 1px dashed blue;'>
+                <div class="col-md-8">
                     <h3 class="secondary">Responsibilities</h3>
                     <ul>
                         <div>
@@ -70,14 +70,17 @@
                                 <ul>
                                     <li>
                                         <p class="project-title">SDSU Service Catalog/Web Portal Development</p>
-                                        <p>Beginning in March of 2020, I began working with the development team to build a new service catalog for SDSU. Our task was to migrate the university's service catalog from the previous Azure implementation, to
-                                            a new centralized web portal using ServiceNow. On the team I was responsibile for building, testing and implementing catalog items. This process required gathering requirements from department leadership, building
-                                            workflows and task tables, constructing variable sets and catalog items, and building automated-test suites to ensure catalog integrity with every item implementation.</p>
+                                        <p>In March of 2020, I began working with the development team to build a new service catalog for SDSU. Our task was to migrate the university's service catalog from the previous Azure implementation, to a new centralized
+                                            web portal using ServiceNow. On the team I was responsibile for building, testing and implementing catalog items. This process required gathering requirements from department leadership, building workflows and
+                                            task tables, constructing variable sets and catalog items, and building automated-test suites to ensure catalog integrity with every item implementation.
+                                        </p>
                                     </li>
                                     <li>
                                         <p class="project-title">SDSU ITSM Mobile Agent iOS/Android App</p>
                                         <p>In April of 2020, after going through the initial stages of the Service Catalog implementation, I was asked to look into building a proof-of-concept ITSM Incident Management mobile application. I studied the ServiceNow
-                                            Studio application builder, mobile development best-practices and UX design.
+                                            Studio application builder, mobile development best-practices and UX design. The application was designed to be intuitive and provide IT process users with a clear and quick way of creating, updating and resolving
+                                            incidents. Based on my experiences working in the Instructional Technology Services, I wanted to build the kind of mobile application I wish I had while I worked in the field troubleshooting issues, writing
+                                            updates and communicating with ITS staff.
                                         </p>
                                     </li>
                                 </ul>
@@ -101,12 +104,12 @@
                         <h3 class="primary"><a>San Diego State University: Instructional Technology Services</a></h3>
                         <h3 class="secondary">Student Assistant</h3>
                         <h3 class="secondary">Oct 2019 - Jun 2020</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <p>During the Fall 2019, I began working with the San Diego State University Instructional Technology Services(ITS) Department. Dedicated to providing support to faculty and staff, ITS also maintains the equipment in select classrooms
+                            on campus. Many of my responsibilites working with ITS involved on-site classroom support, remote over-the-phone assistance. My core responsibilities with ITS were to assist faculty and staff </p>
                     </p>
                 </div>
                 <div class="image-box col-md-4">
-                    <img class="edu-catalog-img" src="https://live.staticflickr.com/65535/50587737353_d1aba44d7e_b.jpg" style='height:"100%"; width:"100%; object-fit: contain;' />
+                    <img src="https://live.staticflickr.com/65535/50588505831_67e8e90269_c.jpg" class="align-right" style='height:95%; width: 95%; object-fit: contain;' />
                 </div>
             </div>
             <!--Upper-->
