--- a/education/education.html
+++ b/education/education.html
@@ -34,7 +34,13 @@
                         <div class="row" style='display:flex;'>
                             <div class="courses-left-col col">
                                 <li><a class="course-links">Data Structures</a></li>
-                                <li><a class="course-links">Algorithms and their Analysis</a></li>
+                                <li>
+                                    <div>
+                                        <a class="course-links">
+                                            Algorithms and their Analysis
+                                        </a>
+                                    </div>
+                                </li>
                                 <li><a class="course-links">Operating Systems</a></li>
                             </div>
                             <div class="courses-right-col col">
@@ -48,7 +54,8 @@
                 <div>
                     <h3 class="secondary">Accomplishements</h3>
                     <ul>
-                        <li><a href="" style='color: black;'>San Diego State University/ServiceNow 2019 Hackathon</a></li>
+                        <li><a href="" style='color: black;'>San Diego State University/ServiceNow 2019 Hackathon</a>
+                        </li>
                     </ul>
                 </div>
             </div>
