completed content for IT User Services, need to finalize ITS content

--- a/career/career.html
+++ b/career/career.html
@@ -29,9 +29,6 @@
                         <p>
                             In the 2020 Spring Semester I began working with San Diego State University's IT User Services Department, as a part of the ServiceNow Deployment Team. I worked with an Agile team as both an Application Administrator and Platform Developer. My core responsibilities
                             on the team was to support IT division staff with the utilization and development of the ServiceNow platform for campus use.
-                            <!-- Due to my background in
-                            computer science and prior experience as a winner of the 2019 SDSU/ServiceNow
-                            Hackathon, IT Division leadership approached me with this opportunity. -->
                         </p>
                         <p>
                             Once I had demonstrated a solid understanding of the ServiceNow platform, I became one of the main contributors to the SDSU Service Catalog project. Our mission was to migrate the IT User Services catalog, which was previously listed on Azure or hosted
@@ -47,7 +44,7 @@
                     </p>
                 </div>
                 <div class="image-box col-md-4 col-sm-12">
-                    <img src="https://live.staticflickr.com/65535/50588505831_67e8e90269_c.jpg" class="align-right" style='height:95%; width: 95%; object-fit: contain;' />
+                    <img src="https://live.staticflickr.com/65535/50639629552_ce0c193d6c_z.jpg" class="align-right" style='height:95%; width: 95%; object-fit: contain;' />
                 </div>
             </div>
             <!--Upper-->
@@ -105,11 +102,20 @@
                         <h3 class="secondary">Student Assistant</h3>
                         <h3 class="secondary">Oct 2019 - Jun 2020</h3>
                         <p>During the Fall 2019, I began working with the San Diego State University Instructional Technology Services(ITS) Department. Dedicated to providing support to faculty and staff, ITS also maintains the equipment in select classrooms
-                            on campus. Many of my responsibilites working with ITS involved on-site classroom support, remote over-the-phone assistance. My core responsibilities with ITS were to assist faculty and staff </p>
+                            on campus. Many of my responsibilites working with ITS involved on-site classroom support, remote over-the-phone assistance. My core responsibilities with ITS were to assist faculty and staff with troubleshooting issues campus
+                            wide, collaborate with other student assistants in developing software solutions that enhance classroom experiences, and support ITS staff with impromptu tasks and responsibilites.
+                        </p>
+                        <p>In the Spring of 2020, I was approched with the opportunity to work with the IT User Services Department in developing and deploying ServiceNow as an IT Support tool campus-wide. I accepted the offer on the premise that I would
+                            be able to commit some time every week to completing the projects I had already started at ITS.
+                        </p>
+                        <p>From Februrary until June of 2020, I devoted four of my allowed twenty hours per week into coordinating with my ITS team members on finishing project I had already been leading. In July of 2020, after completing my final course
+                            required for graduation, I was approved for full-time work for the duration of the semester. However, it was requested that my time be dediceted solely to ServiceNow development work. I produced a project guide to help in the
+                            transition and handed responsibility for this project to my ITS team members.
+                        </p>
                     </p>
                 </div>
                 <div class="image-box col-md-4">
-                    <img src="https://live.staticflickr.com/65535/50588505831_67e8e90269_c.jpg" class="align-right" style='height:95%; width: 95%; object-fit: contain;' />
+                    <img src="https://live.staticflickr.com/65535/50638798593_b48a3feb0f_h.jpg" class="align-right" style='height:95%; width: 95%; object-fit: contain;' />
                 </div>
             </div>
             <!--Upper-->
@@ -120,28 +126,32 @@
                         <div class="row">
                             <div class="courses-left-col col">
                                 <li><a>As a Student Assistant:</a>
-                                    <p>I Worked to troubleshoot hardware and software issues remotely and on location for faculty and staff. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                    <p>I Worked to troubleshoot hardware and software issues remotely and on location for faculty and staff. My responsibilities in this role required that I have a working knowledge of classroom equipment and software, knowledge
+                                        of both Windows and macOS and be able to provide immediate classroom support on a daily basis.
+                                    </p>
+                                    <p>Other responsibilites included daily tasks in classroom maintenence and regular software updates for classroom computers and our own inventory of loaner laptops. ITS also maintained an inventory of equipment available
+                                        for checkout by all staff and faculty, this equipment is maintained by the student assistants who also handle the check-out/check-in.</p>
                                 </li>
                                 <li><a>As an ITS Project Team member:</a>
-                                    <p>Working closely with fellow ITS team members, I lead and participated in various projects for the Instructional Technology Services Department. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                                        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                    <p> I worked to design, implement and test software solutions that enhance user experiences for SDSU's many staff, faculty and students. Working closely with fellow ITS team members, I lead and participated in various projects
+                                        for the Instructional Technology Services Department. My background as a Computer Science major and experiences working in teams with others, put me at the lead of a project aimed at producing subtitles out of recorded
+                                        lecture audio using Amazon Web Services. I was involved in other projects in ITS including one to develop a conversion tool to produce compatible CSVs for the ParScore grading tool.
                                     </p>
                                     <ul>
                                         <li>
-                                            <p class="project-title">Parscore Excel Sheet Conversion Tool</p>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                                                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                                                mollit anim id est laborum.</p>
+                                            <p class="project-title">Parscore Excel Spreadsheet Conversion Tool</p>
+                                            <p>With the adoption of the Canvas Learning Managment System, faculty relying on ITS support faced the challenge that the new Canvas system did not have a compatible tool to convert their grading spreadsheets into
+                                                CSV files for the Scantron ParScore grading program to use. The previous implementation of this program was developed for Blackboard, which the university was in the stages of discontinuing. This issue required
+                                                a new program to be written that could be implemented on Canvas and provide the SDSU faculty with the same service as the last. Built in Python and utilzing the Pandas Data relational data library, we worked
+                                                on a web-service that would allow faculty to upload their grading spreadsheets for conversion and recieve a compatible CSV file to be used with ParScore.</p>
                                             <p><a href="">Git-Hub Project Link</a></p>
                                         </li>
                                         <li>
                                             <p class="project-title">Audio to Subtitle Amazon Web Services Project</p>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                                                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                                                mollit anim id est laborum.</p>
+                                            <p>In the Fall and Winter of 2019, we were asked to look into using Amazon Web Services to build a tool for converting lecture audio into subtitles for use in BlackBoard and Canvas. Our lecture video and audio
+                                                were recorded using the MediaSite lecture capture software. By leveraging the MediaSite REST API we would retrieve the audio files necessary and then upload them to our AWS storage. Then, using the AWS Boto3
+                                                Python API, a series of scripts would send job requests to the AWS client and upload files into the AWS Machine Learning Audio Transcription suite. This suite returns a JSON file of the detected speech-to-text
+                                                content with time stamps and confidence values. This file would then be converted to the standard .srt subtitle format and be used alongside lecture video.</p>
                                             <p><a href="">Git-Hub Project Link</a></p>
                                         </li>
                                     </ul>
@@ -164,12 +174,21 @@
                         <h3 class="primary"><a>Best Buy: San Diego, CA</a></h3>
                         <h3 class="secondary">Sales Associate/Geek Squad Agent/Inventory Specialist</h3>
                         <h3 class="secondary">Nov 2010 - Oct 2019</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <p>
+                            My earliest working experiences came from years of working retail at my local Best Buy. What began as my first "real-world" job, became a character shaping experience. Throughout those years I developed a strong work ethic, a standard for consistency,
+                            and reputation for leadership, reliability and respect in the workplace. <br> Despite the lack of correlation between retail inventory and software development, the soft-skills and experiences gained
+                            through this position strengthened my skills both as an individual and as a team member. I valued my work greatly, I always performed at my best, and I always clocked into a shift with a positive attitude and a motivation to
+                            take on the daily challenges.
+                        </p>
+                        <p>
+                            As I developed my academic plan and looked towards my transfer to a 4-year university I moved myself towards a position within my store with more flexible hours so I could complete my studies. In the Fall of 2019, I left my position at Best Buy to complete
+                            my final year at San Diego State University and take advantage of an opportunity to work IT on campus.
+                        </p>
                     </p>
                 </div>
                 <div class="image-box col-md-4">
-                    <img class="edu-catalog-img" src="https://live.staticflickr.com/65535/50587737353_d1aba44d7e_b.jpg" style='height:"100%"; width:"100%; object-fit: contain;' />
+                    <img class="edu-catalog-img" src="https://live.staticflickr.com/65535/50638788958_cb7f53f670_b.jpg" style='height:"50%"; width:"50%; object-fit: contain;' />
+                    <!--Best Buy Image-->
                 </div>
             </div>
             <!--Upper-->
@@ -180,19 +199,21 @@
                         <div class="row">
                             <div class="courses-left-col col">
                                 <li><a>As a Sales Associate:</a>
-                                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-                                        est laborum.</p>
+                                    <p> My core responsibilites was to listen to the purchase requirements from customers and assist them with making informed decisions. Often times customers enter the department with a list of requirements for their purchase,
+                                        but have questions about whats available and what will fit their needs. I was responsible for keeping up to date with the latest technologies and being ready to answer questions regarding everything from computer
+                                        hardware and specifications to wireless networking and connectivity.</p>
                                 </li>
                                 <li><a>As a Geek Squad Agent:</a>
-                                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-                                        est laborum.</p>
+                                    <p> My core responsibilities was to troubleshoot technical issues from customers on-site and provide solutions to support customer questions and needs. When required, I would offer reccomendations and advanced solutions
+                                        for more in-depth issues.</p>
                                 </li>
                                 <li><a>As an Inventory Specialist:</a>
-                                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-                                        est laborum.</p>
+                                    <p>
+                                        My role as an inventory specialist spanned a variety of responbsibilies and duties. My core responsibilities was to maintain inventory integrity by keeping active stock up to date, fullfilling orders, and leading restocking procedures on a weekly basis.
+                                        Being one of the senior members of our team I had come to learn every aspect of the warehouse, everything from daily standard merchandising procedures, to invetory manegement tasks. My experiences in inventory strengthened
+                                        my communication, task prioritization, and team coordination. As a leader in my team, I was responsible for bringing new-hires up to date with standard operating procedures, completing business critical paperwork
+                                        on a daily basis, and coordinating teams of 4-5 on weekly inventory restocking procedures.
+                                    </p>
                                 </li>
                             </div>
                         </div>
